--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook-debug": "start-storybook -p 9009 -s public --no-dll",
@@ -40,7 +40,7 @@
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
     "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
-    "predeploy": "npm run build",
+    "predeploy": "npm run  build",
     "deploy": "gh-pages -d build"
   },
   "lint-staged": {
